@@ -1,5 +1,8 @@
 2010-05-25  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/client.py (ClientsConnection.__send_payload_size): Rename from
+	ClientsConnection.__start_payload().  All users changed.
+
 	* src/utils.py (sha512_digest): Remove no longer necessary conversions
 	between str and buffer.  Fold into callers.
 	(_DigestsReader, SHA512Reader, SHA512HMACReader, _DigestsWriter)
